fix the localization of Cliamte proof casing

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -8,7 +8,7 @@ tile.gtb_multiblock_active_casing.high_energy_coil.name=High Energy Coil
 tile.gtb_multiblock_active_casing.field_generator_casing.name=Field Generator Casing
 tile.gtb_multiblock_active_casing.dimensional_casing.name=Dimensional Casing
 tile.gtb_multiblock_casing.vacuum_furnace_casing.name=Vacuum Furnace Casing
-tile.gtb_multiblock_casing.climate_proof_casing.name=Climate Proof
+tile.gtb_multiblock_casing.climate_proof_casing.name=Climate Proof Casing
 tile.gtb_multiblock_casing.steel_bordered_wooden_casing.name=Steel Bordered Wooden Casing
 tile.gtb_multiblock_casing.quantum_casing.name=Quantum Casing
 tile.gtb_multiblock_casing.quantum_glass.name=Quantum Glass
