--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -460,7 +460,7 @@ metaitem.neodymium_magnet.name=Neodymium Magnet
 
 
 #Materials
-
+gregtech.material.hydroquinone=Hydroquinone
 gregtech.material.purified_silicon_carbide=Purified Silicon Carbide
 gregtech.material.low_quality_steel=Low Quality Steel
 gregtech.material.eglin_steel_base=Eglin Steel Base
