moved kev generator logic to a separate class. added display methods

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -1422,8 +1422,9 @@ material.trace_rhenium_flue=Trace Rhenium Flue Gas
 
 # Multiblock display information
 
-gtb.multiblock.kev_production=Producing %d kEv
-gtb.multiblock.kev_production.expected=Will produce %d kEv
+gtb.multiblock.kev_generator.cooling=Cooling: %d
+gtb.multiblock.kev_generator.kev_production=Producing %d kEv
+gtb.multiblock.kev_generator.kev_production.expected=Will produce %d kEv
 gtb.multiblock.kev_reception=Receiving %d kEv
 gtb.multiblock.kev_reception.none=No kEv source found
 
