--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -5,6 +5,7 @@ item.material.oreprefix.floated=Floated %s Dust
 item.material.oreprefix.item_casing=%s Item Casing
 item.material.oreprefix.seed_crystal=%s Seed Crystal
 item.material.oreprefix.boule=%s Boule
+item.material.oreprefix.sponge=%s Sponge
 
 # Blocks
 tile.gtb_multiblock_active_casing.high_energy_coil.name=High Energy Coil
