added missing lang entries

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -86,7 +86,7 @@ recipemap.burner_reactor_recipes.name=Burner Reaction
 recipemap.dissolution_tank_recipes.name=Dissolution
 recipemap.gravity_separator_recipes.name=Gravity Separation
 recipemap.electron_beam_lithographer_recipes.name=Electron Beam Lithography
-recipemap.enzymatic_hydrolysis_recipes.name=Enzymatic Hydroly sis
+recipemap.enzymatic_hydrolysis_recipes.name=Enzymatic Hydrolysis
 recipemap.vacuum_ejection_recipes.name=Vacuum Ejection Recipes
 recipemap.dryer_recipes.name=Dryer Recipes
 recipemap.sintering_oven_recipes.name=Sintering
@@ -255,5 +255,13 @@ gtb.machine.condensation_unit.name=Condensation Unit
 gtb.machine.pressure_swing_adsorber.name=Pressue Swing Adsorber
 gtb.machine.dilution_refrigerator.name=Dilution Refrigerator
 gtb.machine.gravity_separator.name=Gravity Separator
+gtb.machine.vacuum_metallizer.name=Vacuum Metallizer
+gtb.machine.high_temp_polymerization_tank.name=High-Temperature Polymerization Tank
+gtb.machine.mocvd_unit.name=MOCVD Unit
+gtb.machine.oxidation_furnace.name=Oxidation Furnace
+gtb.machine.vis_breaker.name=Vis Breaker
+gtb.machine.gravity_settler_tank.name=Gravity Settler Tank
+gtb.machine.vulcanized_press.name=Vulcanized Press
+gtb.machine.curing_oven.name=Curing Oven
 metaitem.electrically_wired_petri_dish.name=Electrically Wired Petri Dish
 gtb.multiblock.nanoscale_fabricator.tooltip.1=Average Crucible heat cannot exceed the target by more than §c250K§7.
