added the Sealed Reaction Chamber

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -18,6 +18,7 @@ tile.gtb_multiblock_casing.quantum_casing.name=Quantum Casing
 tile.gtb_multiblock_casing.quantum_glass.name=Quantum Glass
 tile.gtb_multiblock_casing.biologically_sterile_casing.name=Biologically Sterile Casing
 tile.gtb_multiblock_casing.fullerene_polymer_tetrix_casing.name=Fullerene Polymer Tetrix Casing
+tile.gtb_multiblock_casing.perfectly_sealed_vacuum_casing.name=Perfectly Sealed Vacuum Casing
 tile.gtb_explosive.naquadria_charge.name=Naquadria Charge
 tile.gtb_wire_coil.hss_s.name=HSS-S Coil Block
 tile.gtb_wire_coil.naquadah_alloy.name=Naquadah Alloy Coil Block
@@ -263,5 +264,6 @@ gtb.machine.vis_breaker.name=Vis Breaker
 gtb.machine.gravity_settler_tank.name=Gravity Settler Tank
 gtb.machine.vulcanized_press.name=Vulcanized Press
 gtb.machine.curing_oven.name=Curing Oven
+gtb.machine.sealed_reaction_chamber.name=Sealed Reaction Chamber
 metaitem.electrically_wired_petri_dish.name=Electrically Wired Petri Dish
 gtb.multiblock.nanoscale_fabricator.tooltip.1=Average Crucible heat cannot exceed the target by more than §c250K§7.
